public/styles/post-content.css
@tailwind base;

@layer base {

    .content {
        font-family:  "Jost", sans-serif;
    }

    .content p {
        @apply text-xl mb-3 leading-9
    }

    .content a {
        color: blue;
        text-decoration: underline;
    }

    .content h1,
    .content h2,
    .content h3,
    .content h4,
    .content h5 {

        @apply mb-2;

    }


    .content h1 {
        @apply text-4xl font-bold;
    }

    .content h2 {
        @apply text-3xl font-bold;
    }

    .content h3 {
        @apply text-2xl font-bold;
    }

    .content h4 {
        @apply text-xl;
    }

    .content h5 {
        @apply text-lg;
    }

    .content .rich-content {
        @apply mb-4;
    }

    .content pre {
        display: block;
        background-color: rgba(27, 31, 35, 0.05);
        line-height: 1.25rem;
        padding: 1rem;
        overflow: auto;
        @apply mb-4;
    }

    .content pre code {
        background-color: transparent;
        font-size: 100%;
        padding: 0;
    }

    .content code {
        font-family: "Ubuntu Mono", monospace;
        font-size: 85%;
        padding: 0.2em 0.4em;
        margin: 0;
        color: #eb5a5a;
        background-color: rgba(27, 31, 35, 0.05);
        border-radius: 3px;
    }

    .content blockquote {
        @apply mb-4;
    }

    .content blockquote::before {
        position: absolute;
        content: "“";
        font-size: 6em;
        font-family: roboto, serif;
        line-height: 1.5rem;
        margin-top: 0.1em;
        margin-left: -0.2em;
        z-index: -1;
        @apply text-very-subtle-label
    }

    .content table {
        max-width: 100%;
        border-spacing: 0;
        @apply mb-4;
    }

    .content table thead {
        background: #f7f7f7;
    }

    .content table th {
        @apply font-medium
    }

    .content table th,
    .content table td {
        padding: 0.5em 1em;
        border: 1px double #eee;
    }

    .content ol,
    .content ul {
        padding: 0 0 0 1.5rem;
        @apply mb-4;
    }

    .content ol li,
    .content ul li {
        @apply mb-1 text-xl list-disc;
    }

    .content li ol,
    .content li ul {
        margin: 0;
    }

    .content abbr[title] {
        text-decoration: underline double;
    }

    .content kbd {
        font-family: "Ubuntu Mono", monospace;
    }

    .content img {
        width: 100%;
    }

}

